# ghosts-of-softmax

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  release_checklist.md  requirements.txt
.github/workflows/: ci.yml  pages.yml  test.yml
docs/: activation_hypothesis.html  analytic-normalization.html  index.html
experiments/archgrid/: README.md  contract.json  run.py
experiments/ghostenvelope/: README.md  contract.json  models.py  plot.py  run.py
experiments/lrspike/: README.md  contract.json  run.py
experiments/phasetransition/: README.md  contract.json  plot.py  plotjvp.py  plotsigmoid.py  run.py
experiments/randomdirs/: README.md  contract.json  plot.py  run.py
experiments/resnetnatural/: README.md  contract.json  run.py
experiments/tempfingerprint/: README.md  contract.json  run.py
experiments/tfmbottlenecks/: README.md  contract.json  run.py
notebooks/: fig1.ipynb  fig10.ipynb  fig10_exact_actual_adam.ipynb  fig7.ipynb  fig9.ipynb  ghostenvelope.ipynb  resnet18.ipynb
src/ghosts/: control.py  hooks.py  models.py  plotting.py  radii.py  reporting.py  theory.py
tests/: conftest.py  test_control.py  test_experiment_contracts.py  test_radii.py  test_reporting.py  test_smoke_runs.py  test_theory.py
tutorials/: 00_step_controller_intro.ipynb  01_adam_controller.ipynb  01_binary_radius.ipynb  02_binary_radius.ipynb  02_kl_bound.ipynb  02_momentum_controller.ipynb  03_binary_radius.ipynb  03_kl_bound.ipynb  03_rho_controller.ipynb  04_kl_bound.ipynb
